--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,14 @@
     width: 100px;
     height: 30px;
 }
+.navbar {
+    margin-bottom: 0;
+     border-radius: 0;
+      background-color: rgb(212, 58, 97);
+
+}
+
+footer {
+          padding: 25px;
+          
+}
